--- a/style.css
+++ b/style.css
@@ -89,6 +89,9 @@ form {
     border-radius: 5px;
     background-color: rgb(238, 238, 238);
 }
+.option__box input[type="checkbox"] {
+    zoom: 1.4;
+}
 .generate__btn {
     width: 100%;
     display: block;
